# Acropad

./: .gitignore  BUILD-VERIFIED.md  Core.md  DIRECTORY_STRUCTURE.md  DOCUMENTATION-INDEX.md  DUAL-VERSION-GUIDE.md  FINAL-SUMMARY.txt  FINAL_CHECKLIST.md  IMPLEMENTATION-SUMMARY.md  INDEX.md  PLATFORM-SUPPORT.md  PUSH-TO-GITHUB.md  QUICK-REFERENCE.md  QUICKSTART.md  QUICKSTART.txt  README-v2.md  README.md  SETUP_COMPLETE.md  START-HERE.md  acropad.py  build.sh  debug.txt  launch-electron.sh  launch-pyqt6.sh  launch.sh  launch_error.txt  launch_error_v2.txt  launch_error_v3.txt  launch_error_v4.txt  launch_error_v5.txt  launch_error_v6.txt  main.py  requirements.txt  test-both.sh  ui.py  worker.py
.github/workflows/: build.yml
advanced/: .gitignore  ARCHITECTURE.md  DELIVERY_SUMMARY.md  EXECUTIVE_SUMMARY.md  FILES_INDEX.md  IMPLEMENTATION_EXAMPLE.md  PROJECT_STRUCTURE.md  QUICK_REFERENCE.md  README.md  SETUP.md  flutter_rust_bridge.yaml  pubspec.yaml
advanced/lib/: main.dart
advanced/linux/: CMakeLists.txt
advanced/native/: Cargo.toml
advanced/native/src/: api.rs  frb_generated.rs
advanced/test/: widget_test.dart
dev_history/: COMPLETION-SUMMARY.md  ELECTRON_MIGRATION_SUMMARY.md  FINAL-SUMMARY.md
electron/: .gitignore  COMPATIBILITY_ANALYSIS.md  GEMINI_CLI_FEATURE_GUIDE.md  README.md  package.json
electron/backend/: package.json  server.js
electron/frontend/: jest.config.js  package.json  tsconfig.json
electron/main/: main.js  preload.js
notes/: Untitled-1768959851.md  Untitled-1768961359.md
src/: main.py  renderer.py  ui.py
tests/: test_app.py
(+47 files in other folders)
