[package]
name = "acropad_native"
version = "2.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]

flutter_rust_bridge = "=2.11.1"

anyhow = "1.0"

walkdir = "2.4"

serde = { version = "1.0", features = ["derive"] }

log = "0.4"



[dev-dependencies]

tempfile = "3.8"
